[metadata]
name = webdriver-wharf
author = Sean Myers
author-email = sean.myers@redhat.com
summary = A docker-based warehouse of Selenium servers running chrome and firefox
description-file = README.md
license = MIT
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Systems Administration
    Topic :: Utilities
keywords =
    setup
    distutils

[files]
packages =
    webdriver_wharf

[entry_points]
console_scripts =
    webdriver-wharf = webdriver_wharf.cli:main
